--- a/templates/allTeam.html
+++ b/templates/allTeam.html
@@ -26,7 +26,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">About<i
                                 class="material-icons right">close</i></span>
-                        <p>{{team_infor['about']}}</p>
+                        <p>{{team_infor['teamabout']}}</p>
                     </div>
                 </div>
             </div>
