--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
 <nav>
 
     <div class="nav-wrapper green darken-1">
-        <a href="{{url_for('teamInfo')}}" class="brand-logo">Football Database Management System</a>
+        <a href="" class="brand-logo">Football Database Management System</a>
 
         <ul class="right hide-on-med-and-down">
 
@@ -39,7 +39,7 @@
                 {% endblock %}
 
             </li>
-            <li><a href="{{url_for('feedback')}}">Feedback</a></li>
+            <li><a href="">Feedback</a></li>
             <li><a class="dropdown-button" data-activates="dropdown2">Match Related<i
                     class="material-icons right">arrow_drop_down</i></a></li>
             <!-- Dropdown Trigger -->
