--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,7 @@
 <nav>
 
     <div class="nav-wrapper green darken-1">
-        <a href="" class="brand-logo">Football Database Management System</a>
+        <a href="{{ url_for('teamInfo') }}" class="brand-logo">Football Database Management System</a>
 
         <ul class="right hide-on-med-and-down">
 
