--- a/templates/playerEditForm.html
+++ b/templates/playerEditForm.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-field col s4">
                 <input id="date_of_birth" type="text" class="datepicker" required name='playerDateOfBirth'
-                       value="{{teamPlayerData['playerDateOfBirth']}}">
+                       value="{{teamPlayerData['playerDate']}}">
                 <label for="date_of_birth">Date of birth</label>
             </div>
             <div class="input-field col s4">
@@ -72,7 +72,7 @@
             </div>
             <div class="input-field col s4">
                 <input id="player_jersey_num" type="number" required name="playerJerseyNum"
-                       value="{{teamPlayerData['jersyNum']}}">
+                       value="{{teamPlayerData['playerJerseyNum']}}">
                 <label for="player_jersey_num">Jersey Number</label>
             </div>
 
