--- a/templates/playerinfo.html
+++ b/templates/playerinfo.html
@@ -37,11 +37,11 @@
                 <td>{{playerData['playerName']}}</td>
                 <td>{{playerData['country']}}</td>
                 <td>{{playerData['playerAge']}}</td>
-                <td>{{playerData['playerDateOfBirth']}}</td>
+                <td>{{playerData['playerDate']}}</td>
                 <td>{{playerData['numberOfGoals']}}</td>
                 <td>{{playerData['playerPosition']}}</td>
                 <td>{{playerData['playerCost']}}</td>
-                <td>{{playerData['jersyNum']}}</td>
+                <td>{{playerData['playerJerseyNum']}}</td>
             </tr>
             </tbody>
         </table>
