--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
                 {% endblock %}
 
             </li>
-            <li><a href="">Feedback</a></li>
+            <li><a href="{{ url_for('feedback') }}">Feedback</a></li>
             <li><a class="dropdown-button" data-activates="dropdown2">Match Related<i
                     class="material-icons right">arrow_drop_down</i></a></li>
             <!-- Dropdown Trigger -->
