--- a/templates/feedbackshow.html
+++ b/templates/feedbackshow.html
@@ -15,7 +15,15 @@
     <i class="material-icons left">arrow_back
     </i>Home</a>
 
-<a class=" btn disabled">Total no of feedback is {{ len }}</a>
+<a class=" btn disabled">Total no of feedback is {{ stat['Tcount'] }}</a>
+<a class=" btn disabled">Presentation {{ stat['pcount'] }}%</a>
+<a class=" btn disabled">Idea {{ stat['icount'] }}%</a>
+<a class=" btn disabled">Objective {{ stat['ocount'] }}%</a>
+
+
+
+
+
 {% for feed in feedback %}
     <div class="col s12">
 
