--- a/templates/teaminfo.html
+++ b/templates/teaminfo.html
@@ -11,38 +11,38 @@
 <body text="#5c6566">
 
 <div class="parallax-container">
-    <div class="parallax"><img src="{{teamdata['teamLogo']}}"></div>
+    <div class="parallax"><img src="{{ teamdata['teamLogo'] }}"></div>
 </div>
-<td class="section white">
+<div class="section white">
     <div class="row container">
-        <h3 class="header" style="color: #226997">{{teamdata["teamName"]}}</h3>
+        <h3 class="header" style="color: #226997">{{ teamdata["teamName"] }}</h3>
         <p class="grey-text text-darken-3 lighten-3">
 
         <div class="row">
 
             <div class="col s6">
 
-                <div><h5>Home Ground : {{teamdata["homeGround"]}}</h5></div>
-                <div><h5>Country : {{teamdata["country"]}}</h5></div>
-                <div><h5>Owner : {{teamdata["teamOwner"]}}</h5></div>
-                <div><h5>Founded On : {{teamdata["founded"]}}</h5></div>
-                <div><h5>Coach : {{teamdata["teamCoach"]}}</h5></div>
-                <div><h5>Team Value : ${{teamdata["teamCost"]}}</h5></div>
-                <div><h5>Sponsor : {{teamdata["teamSponsor"]}}</h5></div>
-                <div><h5>Website : {{teamdata["teamWebsite"]}}</h5></div>
+                <div><h5>Home Ground : {{ teamdata["homeGround"] }}</h5></div>
+                <div><h5>Country : {{ teamdata["country"] }}</h5></div>
+                <div><h5>Owner : {{ teamdata["teamOwner"] }}</h5></div>
+                <div><h5>Founded On : {{ teamdata["founded"] }}</h5></div>
+                <div><h5>Coach : {{ teamdata["teamCoach"] }}</h5></div>
+                <div><h5>Team Value : ${{ teamdata["teamCost"] }}</h5></div>
+                <div><h5>Sponsor : {{ teamdata["teamSponsor"] }}</h5></div>
+                <div><h5>Website : {{ teamdata["teamWebsite"] }}</h5></div>
 
             </div>
 
             <div class="col s6">
                 <h4>About</h4>
-                <h5>{{teamdata["about"]}}</h5>
+                <h5>{{ teamdata["about"] }}</h5>
             </div>
 
         </div>
 
 
         </p>
-        <h4 class="header" style="color: #226997">{{teamdata["teamName"]}} Player Information</h4>
+        <h4 class="header" style="color: #226997">{{ teamdata["teamName"] }} Player Information</h4>
         <table>
             <thead>
             <tr>
@@ -50,43 +50,43 @@
             </thead>
 
             <tbody>
-            {% for x in teamdata["players"] %}
-            <tr>
-                <td><h5>{{x["playerName"]}}</h5></td>
-                <td>
-                    <div class="chip">
-                       Jersey No.  {{x["jersyNum"]}}
-                    </div>
-                </td>
+            {% for x in playerData %}
+                <tr>
+                    <td><h5>{{ x["playerName"] }}</h5></td>
+                    <td>
+                        <div class="chip">
+                            Jersey No. {{ x["jerseyNum"] }}
+                        </div>
+                    </td>
 
-            </tr>
+                </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-    </div>
-    <div class="parallax-container">
-        <div class="parallax"><img src="{{teamdata['squadPic']}}"></div>
-    </div>
+</div>
+<div class="parallax-container">
+    <div class="parallax"><img src="{{ teamdata['squadPic'] }}"></div>
+</div>
 
 
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js">
-    </script>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js">
+</script>
 
-    <script>
+<script>
 
-        $(document).ready(function () {
-            $('.parallax').parallax();
-            $(".dropdown-button").dropdown();
-            $('select').material_select();
+    $(document).ready(function () {
+        $('.parallax').parallax();
+        $(".dropdown-button").dropdown();
+        $('select').material_select();
 
-        });
-    </script>
+    });
+</script>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
-    </script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
+</script>
 
 </body>
 </html>
