Toast message with flash

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <!-- Dropdown Structure -->
@@ -49,19 +50,16 @@
 
     </div>
 </nav>
-{#{% with messages = get_flashed_messages(with_categories=true) %}#}
-{#    <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->#}
-{#    {% if messages %}#}
-{#        {% for category, message in messages %}#}
-{#            <div class="alert alert-{{ category }} alert-dismissible" role="alert">#}
-{#                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span>#}
-{#                </button>#}
-{#                <!-- this is the message to be loaded but it is loading plain text withou style --> {{ message }}#}
-{##}
-{#            </div>#}
-{#        {% endfor %}#}
-{#    {% endif %}#}
-{#{% endwith %}#}
+{% with messages = get_flashed_messages(with_categories=true) %}
+    <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+    {% if messages %}
+        {% for category, message in messages %}
+            <script>
+                Materialize.toast('{{ message }}', 3000 , "rounded")
+            </script>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 
 {% block content %} {% endblock %}
 <br>
@@ -88,9 +86,6 @@
         </div>
     </div>
 </footer>
-
-
-<!--Import jQuery before materialize.js-->
 
 <script>
 
