Player search Bar working

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,16 +93,17 @@
     </div>
 
 {% endblock %}
+
 {% block datalist %}
-    {#<datalist id="languages">#}
-    {##}
-    {#    {% for b in player_list %}#}
-    {##}
-    {#    <option value="{{b}}">#}
-    {##}
-    {#        {% endfor %}#}
-    {##}
-    {#</datalist>#}
+    <datalist id="languages">
+
+        {% for b in player_list %}
+
+            <option value="{{ b["playerName"] }}"></option>
+
+        {% endfor %}
+
+    </datalist>
     <form action="" method="post">
         <input type=search list="languages" placeholder="Player Search" name="searchBox">
     </form>
