--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
     <br>
     <br>
 
+
     <div class="container">
         <div class="row ">
             <div class="col s6">
@@ -85,9 +86,9 @@
                 easy-to-understand and it is the best all-in-all.
             </div>
             <div class="col s4 center-align"><i class=" medium material-icons center">dvr</i><br>
-                The database is developed in MONGODB backed up on Clever-Cloud. It is a open source NOSQL database.It's
-                fully-flexed support of
-                JSON Format makes it a hassle-free and super-easy.
+                The database is developed in SQLite backed up on Clever-Cloud. It is a open source Light weight database.It's
+                fully-flexed and builtin support for
+                PYTHON makes it a hassle-free and super-easy.
             </div>
         </div>
     </div>
