--- a/app/templates/playerinfo.html
+++ b/app/templates/playerinfo.html
@@ -11,7 +11,12 @@
 <body>
 
 <div class="parallax-container">
-    <div class="parallax"><img src="{{logo}}"></div>
+    <div class="parallax"><img src="{{logo}}">
+	<a href="{{ url_for('teamPlayers' , teamName=abc['teamName']) }}"
+           class="waves-effect waves-light" style="font-size: medium">
+            <i class="material-icons left">arrow_back
+            </i>Home</a>
+	</div>
 </div>
 <div class="section white">
     <div class="row container">
