--- a/app/templates/topTeam.html
+++ b/app/templates/topTeam.html
@@ -2,9 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> paddnndudiadoudondndcndnc ndc is tjvd ufv djj;adf aasdf ;lkj adf adsfasdf asdfasfd </title>
+    <title> RANKINGS </title>
+	 <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+</head>
 </head>
 <body>
-<h1>Top Team</h1>
+<h1>RANKINGS</h1>
+                 <ul class="collapsible popout" data-collapsible="accordion">
+				 <li>
+                <div class="collapsible-header  card-panel  orange"><i class="material-icons">format_size</i>TOP TEAM
+                </div>
+                <div class="collapsible-body"><span>List of Top Teams</span>
+                    <table class="striped">
+                        <thead>
+                        <tr>
+                            <th>Team Name</th>
+                            <th>Number of Wins</th>
+
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr>
+                            <td>Real Madrid</td>
+                            <td>6</td>
+
+                        </tr>
+                     
+                        </tbody>
+                    </table>
+                </div>
+				</li>
+	<li>
+	
+	
+	 <div class="collapsible-header  card-panel  blue"><i class="material-icons">directions_run</i>TOP PLAYERS
+                </div>
+                <div class="collapsible-body"><span>List of Top Players</span>
+                    <table class="highlight">
+                        <thead>
+                        <tr>
+                            <th>Player Name</th>
+                            <th>Number of Goals</th>
+
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr>
+                            <td>GARETH BALE</td>
+                            <td>12</td>
+
+                        </tr>
+                     
+                        </tbody>
+                    </table>
+                </div>
+				</li>
+	</ul>			
+				
+				
+           
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script>
+      $(document).ready(function () {
+        $('.collapsible').collapsible();
+    });
+</script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
