Addes maneesh github id

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -19,7 +19,7 @@
     <li><a href="https://github.com/aman5319/" target="_blank">Aman Kumar Pandey</a></li>
     <li><a href="https://github.com/aniketsingh777/" target="_blank">Aniket Kumar Singh</a></li>
     <li><a href="https://github.com/keepcalmncode" target="_blank">Kali Kiran Kumar K</a></li>
-    <li><a href="#" target="_blank">Maneesh V Kumar</a></li>
+    <li><a href="https://github.com/VManeeshK" target="_blank">Maneesh V Kumar</a></li>
 </ul>
 
 <ul id="dropdown2" class="dropdown-content">
