refactoring of fixture table

--- a/app/templates/matchFixture.html
+++ b/app/templates/matchFixture.html
@@ -9,7 +9,7 @@
 
 <body>
 <h1 style="color:blue;">MATCH FIXTURE</h1>
-<div class="chip">DATE:11-11-2017</div>
+<div class="chip">DATE:{{ date }}</div>
 
 <table class="striped">
     <thead>
