padding for match fixture
title style and padding for team1 and team name

--- a/app/templates/matchFixture.html
+++ b/app/templates/matchFixture.html
@@ -8,13 +8,15 @@
 </head>
 
 <body>
-<h1 style="color:blue;">MATCH FIXTURE</h1>
-<div class="chip">DATE:{{ date }}</div>
+<h1 style="color: black;"><div class="col s12 m2">
+   <div class="card-panel  cyan darken-2"> MATCH FIXTURE</h1></div>
+    </div>
+
 
 <table class="striped">
     <thead>
     <tr>
-        <td>TEAM 1</td>
+        <td>&nbsp TEAM 1</td>
         <td>TEAM 2</td>
         <td>STADIUM</td>
         <td>LOCATION</td>
@@ -23,7 +25,7 @@
     <tbody>
     {% for x in fixture %}
         <tr>
-            <td>{{ x['team1'] }}</td>
+            <td>&nbsp {{ x['team1'] }}</td>
             <td>{{ x["team2"] }}</td>
             <td>{{ x["stadium"] }}</td>
             <td>{{ x["location"] }}</td>
