--- a/app/templates/topTeam.html
+++ b/app/templates/topTeam.html
@@ -11,6 +11,10 @@
 </head>
 </head>
 <body>
+<a href="{{ url_for('teamInfo') }}"
+   class="waves-effect waves-light btn">
+    <i class="material-icons left">arrow_back
+    </i>Home</a>
 <h1>RANKINGS</h1>
 <ul class="collapsible popout" data-collapsible="accordion">
     <li>
