player search bug fix

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,7 +25,7 @@
 <ul id="dropdown2" class="dropdown-content">
     <li><a href="{{ url_for('matchFixture') }}">Match Fixture</a></li>
     <li><a href="{{ url_for('topTeam') }}">Top Team</a></li>
-    <li><a href="{{ url_for('topTeam') }}">Match Result</a></li>
+    <li><a href="{{ url_for('matchResult') }}">Match Result</a></li>
 </ul>
 <nav>
 
