--- a/app/templates/back.html
+++ b/app/templates/back.html
@@ -13,7 +13,7 @@
    class="waves-effect waves-light btn">
     <i class="material-icons left">arrow_back
     </i>Home</a><br>
-	<h3 class="center-align">&nbsp &nbsp YOU NEED TO HAVE EVEN NUMBER OF TEAMS</h3><br>
+	<h3 class="center-align">YOU NEED TO HAVE EVEN NUMBER OF TEAMS</h3><br>
 	<h5 class="center-align">Click HOME Button to start over again!</h5><br>
 	<h6 class="center-align">Don't forget to ADD a team</h6>
 	
