--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,6 +26,7 @@
     <li><a href="{{ url_for('matchFixture') }}">Match Fixture</a></li>
     <li><a href="{{ url_for('topTeam') }}">Top Team</a></li>
     <li><a href="{{ url_for('matchResult') }}">Match Result</a></li>
+	<li><a href="{{url_for('query1')}}">Queries</a></li>
 </ul>
 <nav>
 
