--- a/app/templates/demo2.html
+++ b/app/templates/demo2.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>query</title>
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
-<table>
+<h5>Retrive the details of players whose age is between 20 and 30.</h5><br><br>
+
+<table class="bodered">
     <thead>
     <tr>
         <td>Player Name</td>
@@ -24,5 +30,10 @@
     {% endfor %}
     </tbody>
 </table>
+<br><br><br>
+<a href="{{ url_for('query3') }}"
+   class="waves-effect waves-light btn right">NEXT
+    <i class="material-icons right">arrow_forward</i></a>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
