added query page
added demo6 and updated demo5

--- a/app/templates/demo8.html
+++ b/app/templates/demo8.html
@@ -9,15 +9,12 @@
 
 </head>
 <body>
-<h5>Demonstrate the update operation by updating all the Player's Cost by 10% who have scored more than 6 goals.</h5><br><br>
+<h5>Retrieve the team who lose more than 3 matches</h5><br><br>
 
 <table class="bodered">
     <thead>
     <tr>
-        <td>Player Name</td>
-        <td>Number of Goals</td>
-        <td>Player Cost</td>
-
+        <td>Team Name</td>
     </tr>
     </thead>
     <tbody>
@@ -32,13 +29,9 @@
     </tbody>
 </table>
 <br><br><br>
-<a href="{{ url_for('query6') }}"
+<a href="{{ url_for('query7') }}"
    class="waves-effect waves-light btn right">NEXT
-    <i class="material-icons left">arrow_forward</i></a>
+    <i class="material-icons right">arrow_forward</i></a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-<!--<a href="{{ url_for('query4') }}"
-   class="waves-effect waves-light btn left">BACK
-    <i class="material-icons left">arrow_back</i></a>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>-->
 </body>
 </html>
