--- a/app/templates/demo6.html
+++ b/app/templates/demo6.html
@@ -9,15 +9,12 @@
 
 </head>
 <body>
-<h5>Demonstrate the update operation by updating all the Player's Cost by 10% who have scored more than 6 goals.</h5><br><br>
+<h5>Retrive the player name who scored less than 8 goals and his position is centre half back</h5><br><br>
 
 <table class="bodered">
     <thead>
     <tr>
         <td>Player Name</td>
-        <td>Number of Goals</td>
-        <td>Player Cost</td>
-
     </tr>
     </thead>
     <tbody>
@@ -32,13 +29,9 @@
     </tbody>
 </table>
 <br><br><br>
-<a href="{{ url_for('query6') }}"
-   class="waves-effect waves-light btn right">NEXT
-    <i class="material-icons left">arrow_forward</i></a>
+<a href="{{ url_for('teamInfo') }}"
+   class="waves-effect waves-light btn right">HOME
+    <i class="material-icons right">home</i></a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-<!--<a href="{{ url_for('query4') }}"
-   class="waves-effect waves-light btn left">BACK
-    <i class="material-icons left">arrow_back</i></a>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>-->
 </body>
 </html>
