--- a/app/templates/feedbackshow.html
+++ b/app/templates/feedbackshow.html
@@ -6,23 +6,18 @@
     <title>Team Information</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <script type="text/javascript" src="http://kozea.github.com/pygal.js/latest/pygal-tooltips.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+
 <br>
 <a href="{{ url_for('teamInfo') }}"
    class="waves-effect waves-light btn">
     <i class="material-icons left">arrow_back
     </i>Home</a>
 
-<a class=" btn disabled">Total no of feedback is {{ stat['Tcount'] }}</a>
-<a class=" btn disabled">Idea {{ stat['icount'] }}%</a>
-<a class=" btn disabled">Presentation {{ stat['pcount'] }}%</a>
-<a class=" btn disabled">Objective {{ stat['ocount'] }}%</a>
-
-
-
-
+<a class=" btn disabled">Total no of feedback is {{ stat1 }}</a>
 
 {% for feed in feedback %}
     <div class="col s12">
@@ -81,10 +76,9 @@
         </div>
     </div>
 {% endfor %}
-
-
-
-
+<figure>
+    <embed type="image/svg+xml" src="{{ stat|safe }}"></embed>
+</figure>
 
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
