--- a/app/templates/allTeam.html
+++ b/app/templates/allTeam.html
@@ -23,13 +23,15 @@
 
                                 <a href="{{ url_for('viewTeam' , teamName=team_infor['teamName']) }}"
                                    class="waves-effect waves-teal btn-flat">View</a>
-                                <a href="{{ url_for('editTeam' , teamName=team_infor['teamName']) }}"
-                                   class="waves-effect waves-teal btn-flat">Update</a>
-                                <form action="{{ url_for('deleteTeam', teamName=team_infor['teamName']) }}"
-                                      method="post">
-                                    <input class="waves-effect waves-teal btn-flat" value="Delete" type="submit"
-                                           onClick="return !!confirm('This will delete {{ team_infor["teamName"] }}');"/>
-                                </form>
+                                {% if session.logged_in or session.admin %}
+                                    <a href="{{ url_for('editTeam' , teamName=team_infor['teamName']) }}"
+                                       class="waves-effect waves-teal btn-flat">Update</a>
+                                    <form action="{{ url_for('deleteTeam', teamName=team_infor['teamName']) }}"
+                                          method="post">
+                                        <input class="waves-effect waves-teal btn-flat" value="Delete" type="submit"
+                                               onClick="return !!confirm('This will delete {{ team_infor["teamName"] }}');"/>
+                                    </form>
+                                {% endif %}
                             </div>
                             <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">About<i
