--- a/app/templates/teamplayers.html
+++ b/app/templates/teamplayers.html
@@ -21,6 +21,8 @@
                             class="material-icons right">more_vert</i>{{ a["playerName"] }}</span>
                                 <a href="{{ url_for('viewPlayer', teamName=teamNamee, playerId=a['playerId']) }}"
                                    class="waves-effect waves-teal btn-flat">View</a>
+                                {% if session.logged_in or session.admin %}
+
                                 <a href="{{ url_for('editPlayers', teamName=teamNamee, playerId=a['playerId']) }}"
                                    class="waves-effect waves-teal btn-flat">Update</a>
                                 <form action="{{ url_for('deletePlayers' , teamName=teamNamee , playerId=a['playerId']) }}"
@@ -28,6 +30,8 @@
                                     <input class="waves-effect waves-teal btn-flat" type="submit" value="Delete"
                                            onClick="return !!confirm('This will delete {{ a["playerName"] }}');"/>
                                 </form>
+                                {% if session.logged_in or session.admin %}
+
                             </div>
                             <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">About<i
@@ -43,11 +47,11 @@
 
     {% if len == 0 %}
         <br>
-            <h1>No Players in {{ teamNamee }}</h1>
-            <h3>Tap The Blue Circular Button In Corner To Add A Player</h3>
-            <br><br><br>
-            <br>
-        {% endif %}
+        <h1>No Players in {{ teamNamee }}</h1>
+        <h3>Tap The Blue Circular Button In Corner To Add A Player</h3>
+        <br><br><br>
+        <br>
+    {% endif %}
     <div class="fixed-action-btn">
         <a href="{{ url_for('addPlayers' , teamName=teamNamee) }}"
            class="btn-floating btn-large waves-effect waves-light teal">
