--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,13 +37,13 @@
     <br>
 
 
-    <div class="container">
-        <div class="row ">
-            <div class="col s6">
+    <div class="container" style="width: 40%;height: 40%; ; background-position: center">
+        <div class="row"  >
+            <div class="col s12" >
                 <div class="card-panel hoverable">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="../static/lion.png">
+                    <div class="card" >
+                        <div class="card-image waves-effect waves-block waves-light ce">
+                            <img class="activator" src="../static/lion1.png" >
                         </div>
                         <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Premier League<i
@@ -86,7 +86,8 @@
                 easy-to-understand and it is the best all-in-all.
             </div>
             <div class="col s4 center-align"><i class=" medium material-icons center">dvr</i><br>
-                The database is developed in SQLite backed up on Clever-Cloud. It is a open source Light weight database.It's
+                The database is developed in SQLite backed up on Clever-Cloud. It is a open source Light weight
+                database.It's
                 fully-flexed and builtin support for
                 PYTHON makes it a hassle-free and super-easy.
             </div>
