--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,41 +1,49 @@
 {% extends "layout.html" %}
 {% block content %}
-    <form action="" method=post class="form-horizontal">
-        <h2>Sign up for FlaskLogin(Todo) Application </h2>
-        <div class="control-group">
-            <div class="controls">
-                <input type="text" id="username" name="username" class="input-xlarge"
-                       placeholder="Enter Username" value="{{ request.form.username }}"
-                       required>
-            </div>
-        </div>
 
-        <div class="control-group">
-            <div class="controls">
-                <input type="email" id="email" name="email" class="input-xlarge"
-                       placeholder="Enter Email" value="{{ request.form.email }}"
-                       required>
-            </div>
-        </div>
-        <div class="control-group">
-            <div class="controls">
-                <input type="password" id="password" name="password" class="input-xlarge"
-                       placeholder="Enter Password"
-                       required>
-            </div>
-        </div>
 
-        <div class="control-group">
-            <div class="controls">
-                <input type="password" id="conform_password" name="cpassword" class="input-xlarge"
-                       placeholder="Confirm Password"
-                       required>
+    <br>
+<br>
+    <div class="row" style="width: 50%;background-position: center">
+        <div class="col s12 ">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Register</span>
+                    <form action="" method=post class="form-horizontal">
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input id="name" type="text" required name='username' value="{{  request.form.username}}">
+                                <label for="name">Username</label>
+                            </div>
+                             <div class="input-field col s6">
+                                  <input id="email" type="email" required name='email' value="{{  request.form.email}}">
+                                <label for="email">Email</label>
+                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <input id="password" type="password" required name="password">
+                                <label for="password">Password</label>
+                            </div>
+                            <div class="input-field col s6">
+                                <input id="cpassword" type="password" required name="cpassword">
+                                <label for="cpassword">Confirm Password</label>
+                            </div>
+                        </div>
+
+                        <div class="control-group">
+                            <div class="controls">
+                                <button type="submit" class="btn btn-success">Register</button>
+
+                            </div>
+                        </div>
+
+                    </form>
+
+                </div>
             </div>
         </div>
-        <div class="control-group">
-            <div class="controls">
-                <button type="submit" class="btn btn-success">Signup</button>
-            </div>
-        </div>
-    </form>
+    </div>
+
+
 {% endblock %}
