--- a/app/templates/teamplayers.html
+++ b/app/templates/teamplayers.html
@@ -30,7 +30,7 @@
                                     <input class="waves-effect waves-teal btn-flat" type="submit" value="Delete"
                                            onClick="return !!confirm('This will delete {{ a["playerName"] }}');"/>
                                 </form>
-                                {% if session.logged_in or session.admin %}
+                                {% endif %}
 
                             </div>
                             <div class="card-reveal">
