--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 
 
     <br>
-<br>
+    <br>
     <div class="row" style="width: 50%;background-position: center">
         <div class="col s12 ">
             <div class="card blue-grey darken-1">
@@ -12,13 +12,21 @@
                     <form action="" method=post class="form-horizontal">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="name" type="text" required name='username' value="{{  request.form.username}}">
-                                <label for="name">Username</label>
+                                <input id="name" type="text" required name='username'
+                                       value="{{ request.form.username }}">
+                                <label for="name">Fullname</label>
                             </div>
-                             <div class="input-field col s6">
-                                  <input id="email" type="email" required name='email' value="{{  request.form.email}}">
+
+                            <div class="input-field col s6">
+                                <input id="phone" type="number" required name='phone' value="{{ request.form.phone }}">
+                                <label for="phone">Phone Number</label>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <input id="email" type="email" required name='email' value="{{ request.form.email }}">
                                 <label for="email">Email</label>
-                             </div>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
