added query pages
updated query 6 page and added 4 more static query pages

--- a/app/templates/demo8.html
+++ b/app/templates/demo8.html
@@ -9,12 +9,13 @@
 
 </head>
 <body>
-<h5>Retrieve the team who lose more than 3 matches</h5><br><br>
+<h5>Retrieve the team who lost more than 3 matches</h5><br><br>
 
 <table class="bodered">
     <thead>
     <tr>
         <td>Team Name</td>
+		<td>Matches Lost</td>
     </tr>
     </thead>
     <tbody>
@@ -29,9 +30,9 @@
     </tbody>
 </table>
 <br><br><br>
-<a href="{{ url_for('query7') }}"
+<a href="{{ url_for('query9') }}"
    class="waves-effect waves-light btn right">NEXT
-    <i class="material-icons right">arrow_forward</i></a>
+    <i class="material-icons left">arrow_forward</i></a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
