--- a/app/templates/demo10.html
+++ b/app/templates/demo10.html
@@ -9,14 +9,13 @@
 
 </head>
 <body>
-<h5>Retrive the player name who scored less than 8 goals and his position is centre half back</h5><br><br>
+<h5>Retrieve the details of players whose team country is same as the palyer country group by country.</h5><br><br>
 
 <table class="bodered">
     <thead>
     <tr>
         <td>Player Name</td>
-		<td>Number of goals</td>
-        <td>Position</td>		
+		<td>Counrty</td>
     </tr>
     </thead>
     <tbody>
@@ -31,9 +30,9 @@
     </tbody>
 </table>
 <br><br><br>
-<a href="{{ url_for('query7') }}"
-   class="waves-effect waves-light btn right">NEXT
-    <i class="material-icons left">arrow_forward</i></a>
+<a href="{{ url_for('teamInfo') }}"
+   class="waves-effect waves-light btn right">HOME
+    <i class="material-icons right">home</i></a>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 </html>
